# api/controllers/restaurant.js
@@ -4,12 +4,19 @@ var db = require('../repository/restaurant')();
 // Exports all the functions to perform on the db
 module.exports = {
   getRestaurantAll,
+  getRestaurantCustomers,
   getRestaurantCustomer,
   getRestaurantWaits,
+  getRestaurantWait,
+  getRestaurantDineTables,
   getRestaurantDineTable,
+  getRestaurantDishgroups,
   getRestaurantDishgroup,
+  getRestaurantDishes,
   getRestaurantDish,
+  getRestaurantOrders,
   getRestaurantOrder,
+  getRestaurantReceipts,
   getRestaurantReceipt,
   saveRestaurant, 
   getRestaurantOne, 
@@ -22,6 +29,13 @@ function getRestaurantAll(req, res, next) {
   db.find(0, res);
 }
 
+//GET /restaurant/{rid}/customers operationId
+function getRestaurantCustomers(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    db.findcustomer(rid, id, res);
+}
+
 //GET /restaurant/{rid}/customers/{id} operationId
 function getRestaurantCustomer(req, res, next) {
     var rid = req.swagger.params.rid.value;
@@ -31,13 +45,30 @@ function getRestaurantCustomer(req, res, next) {
     db.findcustomer(rid, id, res);
 }
 
-//GET /restaurant/{rid}/waits/{id} operationId
+//GET /restaurant/{rid}/waits operationId
 function getRestaurantWaits(req, res, next) {
     var rid = req.swagger.params.rid.value;
     var id = 0;
     if(req.swagger.params.id !== undefined)
         id = req.swagger.params.id.value;
     db.findwait(rid, id, res);
+}
+
+
+//GET /restaurant/{rid}/waits/{id} operationId
+function getRestaurantWait(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    if(req.swagger.params.id !== undefined)
+        id = req.swagger.params.id.value;
+    db.findwait(rid, id, res);
+}
+
+//GET /restaurant/{rid}/dinetables operationId
+function getRestaurantDineTables(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    db.finddinetable(rid, id, res);
 }
 
 //GET /restaurant/{rid}/dinetables/{id} operationId
@@ -49,6 +80,13 @@ function getRestaurantDineTable(req, res, next) {
     db.finddinetable(rid, id, res);
 }
 
+//GET /restaurant/{rid}/dishgroups operationId
+function getRestaurantDishgroups(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    db.finddishgroup(rid, id, res);
+}
+
 //GET /restaurant/{rid}/dishgroups/{id} operationId
 function getRestaurantDishgroup(req, res, next) {
     var rid = req.swagger.params.rid.value;
@@ -56,6 +94,13 @@ function getRestaurantDishgroup(req, res, next) {
     if(req.swagger.params.id !== undefined)
         id = req.swagger.params.id.value;
     db.finddishgroup(rid, id, res);
+}
+
+//GET /restaurant/{rid}/dishes operationId
+function getRestaurantDishes(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    db.finddish(rid, id, res);
 }
 
 //GET /restaurant/{rid}/dishes/{id} operationId
@@ -67,6 +112,13 @@ function getRestaurantDish(req, res, next) {
     db.finddish(rid, id, res);
 }
 
+//GET /restaurant/{rid}/orders operationId
+function getRestaurantOrders(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    db.findorder(rid, id, res);
+}
+
 //GET /restaurant/{rid}/orders/{id} operationId
 function getRestaurantOrder(req, res, next) {
     var rid = req.swagger.params.rid.value;
@@ -74,6 +126,13 @@ function getRestaurantOrder(req, res, next) {
     if(req.swagger.params.id !== undefined)
         id = req.swagger.params.id.value;
     db.findorder(rid, id, res);
+}
+
+//GET /restaurant/{rid}/receipts operationId
+function getRestaurantReceipts(req, res, next) {
+    var rid = req.swagger.params.rid.value;
+    var id = 0;
+    db.findreceipt(rid, id, res);
 }
 
 //GET /restaurant/{rid}/receipts/{id} operationId
