# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: BaapChef API
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -17,12 +17,7 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
-securityDefinitions:
-  Bearer:
-    description: For accessing the API a valid JWT token must be passed in all the queries in the 'Authorization' header.
-    type: apiKey
-    name: Authorization
-    in: header  
+
 paths:
   /authenticate:
       # our controller name
@@ -169,7 +164,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant customers
-      operationId: getRestaurantCustomer
+      operationId: getRestaurantCustomers
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -239,7 +234,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant waits
-      operationId: getRestaurantWaits
+      operationId: getRestaurantWait
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -265,7 +260,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant dinetables
-      operationId: getRestaurantDineTable
+      operationId: getRestaurantDineTables
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -314,7 +309,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant dishgroups
-      operationId: getRestaurantDishgroup
+      operationId: getRestaurantDishgroups
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -363,7 +358,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant dishes
-      operationId: getRestaurantDish
+      operationId: getRestaurantDishes
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -411,7 +406,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant order
-      operationId: getRestaurantOrder
+      operationId: getRestaurantOrders
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -459,7 +454,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get a restaurant order
-      operationId: getRestaurantReceipt
+      operationId: getRestaurantReceipts
       # define the type of response for Success "200" and Error
       parameters:
         - name: rid
@@ -610,7 +605,7 @@ paths:
     x-swagger-router-controller: customer
     get:
       description: get a customer restaurants
-      operationId: getCustomerRestaurant
+      operationId: getCustomerRestaurants
       # define the type of response for Success "200" and Error
       parameters:
         - name: cid
@@ -632,7 +627,7 @@ paths:
     x-swagger-router-controller: customer
     get:
       description: get a customer restaurant
-      operationId: restaurants
+      operationId: getCustomerRestaurant
       # define the type of response for Success "200" and Error
       parameters:
         - name: cid
@@ -658,7 +653,7 @@ paths:
     x-swagger-router-controller: customer
     get:
       description: get a customer order
-      operationId: getCustomerOrder
+      operationId: getCustomerOrders
       # define the type of response for Success "200" and Error
       parameters:
         - name: cid
@@ -706,7 +701,7 @@ paths:
     x-swagger-router-controller: customer
     get:
       description: get a customer order
-      operationId: getCustomerReceipt
+      operationId: getCustomerReceipts
       # define the type of response for Success "200" and Error
       parameters:
         - name: cid
@@ -1058,109 +1053,6 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-
-  /movie:
-      # our controller name
-      x-swagger-router-controller: movie
-      get:
-        description: get the movies list
-        operationId: getAll
-        # define the type of response for Success "200" and Error            
-        responses:
-          "200":
-            description: Success
-            schema:
-              $ref: "#/definitions/GetMoviesListResponse"
-          default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse"
-      post:
-        description: add a new movie to the list
-        operationId: save
-        # movie info to be stored
-        parameters:
-          - name: title
-            description: Movie properties
-            in: body
-            required: true
-            schema:
-              $ref: "#/definitions/Movie"
-        responses:
-          "200":
-            description: Success
-            schema:
-              $ref: "#/definitions/GeneralResponse"
-          default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse"  
-  /movie/{id}:
-      # our controller name
-      x-swagger-router-controller: movie
-      get:
-        description: get a movie
-        operationId: getOne
-        # define the type of response for Success "200" and Error
-        parameters:
-          - name: id
-            type: string
-            in: path
-            required: true
-        responses:
-          "200":
-            description: Success
-            schema:
-              $ref: "#/definitions/GetMovieResponse"
-          default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse" 
-      put:
-        description: update a movie
-        operationId: update
-        # define the parameters
-        parameters:
-          - name: id
-            description: Movie id
-            type: string
-            in: path
-            required: true
-          - name: title
-            description: Movie properties
-            in: body
-            required: true
-            schema:
-              $ref: "#/definitions/Movie"
-        responses:
-          "200":
-            description: Success
-            schema:
-              $ref: "#/definitions/GeneralResponse"
-          default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse" 
-      delete:
-        description: delete a movie
-        operationId: delMovie
-        # define the parameters
-        parameters:
-          - name: id
-            description: Movie id
-            type: string
-            in: path
-            required: true
-        responses:
-          "200":
-            description: Success
-            schema:
-              $ref: "#/definitions/GeneralResponse"
-          default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse"
-
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -1401,23 +1293,6 @@ definitions:
         name: 
           type: string
 
-  Order:
-      type: object
-      properties:
-        id:
-          type: integer      
-
-  OrderItem:
-      type: object
-      properties:
-        id:
-          type: integer      
-        name:
-          type: string
-          description: dish name  
-        note: 
-          type: string           
-
   GetOrdersListResponse:
       required:
         - orders
@@ -1430,13 +1305,6 @@ definitions:
             properties:
               id:
                 type: integer
-
-  GetOrderResponse:
-      required:
-        - id
-      properties:
-        id:
-          type: integer
 
   GetOrderItemsListResponse:
       required:
@@ -1488,48 +1356,7 @@ definitions:
           type: integer
         name: 
           type: string
-
-  Movie:
-      type: object
-      properties:
-        title:
-          type: string
-          description: task object name
-        year:
-          type: number
-          description: task description
-      required:
-        - title
-        - year
-  GetMoviesListResponse:
-      required:
-        - movies
-      properties:
-        # The array of movies
-        movies:
-          type: array
-          items: 
-            type: object
-            properties:
-              id:
-                type: string
-              title:
-                type: string
-              year:
-                type: number
-  GetMovieResponse:
-      required:
-        - id
-        - title
-        - year
-      properties:
-        id:
-          type: string
-        title: 
-          type: string
-        year:
-          type: number  
-
+  
   GeneralResponse:
       type: object
       properties:
@@ -1542,18 +1369,7 @@ definitions:
       required:
         - success
         - description
-  TestResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
+  
   ErrorResponse:
     required:
       - message
